syntax = "proto3";

option java_multiple_files = true;

package com.createfiles.grpcHelloWorld;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
service GreetingService {
  rpc greeting (HelloRequest) returns (HelloResponse);
}